# agentskills

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
examples/: validate.py
examples/agno/: agent.py
examples/crewai/: agent.py
examples/langchain/: agent.py
examples/python/: agent.py
src/agent_skills_sdk/: __init__.py  cli.py  client.py  discovery.py  exceptions.py  executor.py  models.py  parser.py
src/agent_skills_sdk/adapters/: __init__.py  agno.py  base.py  crewai.py  langchain.py
tests/: test_client.py
